v6.3
-----
+ Added an information dialog to app pages that are excluded from Family Sharing
+ Steam user review scores are now loaded more quickly


v6.2.1
-----
+ Added inventory market data to other user's inventories
+ Added avg price of 3 cards to booster packs in inventory

v6.2
-----
+ Rewrote custom profile background selection dialog
+ Added a link to a game's AStats page in the achievement section on app pages
+ Added support for Humble Widgets in price comparisons
: Fixed a bug where Legend of Grimrock store page could inadvertently show incorrect DRM warnings
: Fixed a bug with account total not being correct for Russian currencies
- Removed market data on inventory items, as this feature was implemented by Valve
- Removed achievement section on app pages, as this was re-implemented by Valve

v6.1
-----
+ Added a "Popular" tab on the homepage to browse the most-played games on Steam
+ Store pages now display a full size background
+ Added back links in the header (Forums, Games, Reviews)
+ Selecting booster packs in your inventory now shows the average price of three cards for that game
+ Added option to only search within product names
+ Added inventory marketplace support for Battleblock Theater items
+ Added a loading dialog to custom profile background selection
: Fixed a bug that caused price comparison overlays to be partially hidden in some circumstances
: Fixed a bug that sometimes caused purchase date to be incorrect after buying the game as a gift
: Fixed a bug which would cause CS:GO items not to get market data in non-English languages

v6.0.1
-----
+ Added profile links to private profiles
+ Gift transactions are now listed separately in account totals
: Fixed a bug that caused inventory pages to not always show price history

v6.0
-----
+ Added warning if browsing in a language other than your preferred language (set in options)
+ Added ability to add a custom amount to your Steam wallet